--- a/.env.local
+++ b/.env.local
@@ -1,8 +1,5 @@
 # Replace this with your actual Google Client ID from Google Cloud Console
-<<<<<<< HEAD
-NEXT_PUBLIC_GOOGLE_CLIENT_ID=NEXT_PUBLIC_GOOGLE_CLIENT_ID
-NEXT_PUBLIC_API_URL=NEXT_PUBLIC_API_URL
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=981818690309-gd5fdrjg5ea3qi67sleot8ma4tovsrjb.apps.googleusercontent.com
+NEXT_PUBLIC_API_URL=http://localhost:5000
 NODE_ENV=ENV
-=======
->>>>>>> ada5b18d1e3617eb4ae38aacf0b318b130ad98e3
 
